--- a/queryraiserapp/templates/adminassignedcomplaints.html
+++ b/queryraiserapp/templates/adminassignedcomplaints.html
@@ -193,11 +193,11 @@
                         
                     </a>
                     <ul class="submenu">
-                        <li class="nav-item"><a class="nav-link active" href="{% url 'adminnewcomplaints' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'adminnewcomplaints' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
                           </svg>New Complaints</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'adminassignedcomplaints' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'adminassignedcomplaints' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
                             <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
                             <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
                           </svg>Assigned Complaints</a></li>
@@ -268,13 +268,13 @@
         <main class="content"> 
             <div class="subnav d-flex justify-content-between align-items-center"> 
                 <div>
-                    <h3>New Complaints</h3>
+                    <h3>Assigned Complaints</h3>
                 </div>
             </div>
-            <div class="newcomplainttable">
+            <div class="assignedcomplainttable">
                 <div class="tablelist">
                     <div class="table-container">
-                        <table class="tables" id="newcomplaintstable">
+                        <table class="tables" id="assignedcomplaintstable">
                             <thead>
                                 <tr>
                                     <th>Complaint ID</th>
@@ -282,7 +282,9 @@
                                     <th>Faculty Name</th>
                                     <th>Department</th>
                                     <th>Title</th>
-                                    <th></th>
+                                    <th>Technician</th>
+                                    <th>Technician Number</th>
+                                    <th>Message</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -290,38 +292,7 @@
                         </table>
                     </div>
                 </div>
-            </div>
-            <div id="complaintOverlay" class="overlay">
-                <div class="overlay-content">
-                    <span class="close-button" onclick="closeComplaintOverlay()">×</span>
-                    <h3 id="overlayTitle"></h3> 
-                    <div class="complaint-details">
-                        <label for="overlayDescription">Description</label>
-                        <span id="overlayDescription"></span>
-                    </div>
-                    <div class="complaint-details">
-                        <label for="overlayComplaintId">Complaint ID</label>
-                        <span id="overlayComplaintId"></span>
-                    </div>
-                    <div class="complaint-details">
-                        <label for="overlayDepartment">Department</label>
-                        <span id="overlayDepartment"></span>
-                    </div>
-                    <div class="complaint-details">
-                        <label for="overlayFaculty">Complaint Raised By</label>
-                        <span id="overlayFaculty"></span>
-                    </div>
-                    <div class="complaint-details">
-                        <label for="overlayDate">Date Raised</label>
-                        <span id="overlayDate"></span>
-                    </div>
-                    <div>
-                        <button id="assigntechnician" class="save-button">
-                            Assign Technician
-                        </button>
-                    </div>
-                </div>
-            </div>            
+            </div>        
         </main> 
         <footer class="footer position-absolute">
             <div>
@@ -350,24 +321,24 @@
 
     </script>
     <script>
-    function getnewcomplaints(){
-        fetch('/adminnewcomplaintstable/',{
+    function getassignedcomplaints(){
+        fetch('/getassignedcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
                 'Content-Type': 'application/json'
-        }
+            }
         })
         .then(response => response.json()) 
         .then(data => {
             console.log(data)
-            const newcomplaintTableBody = document.querySelector('#newcomplaintstable tbody');
-            newcomplaintTableBody.innerHTML = '';
+            const assignedcomplaintTableBody = document.querySelector('#assignedcomplaintstable tbody');
+            assignedcomplaintTableBody.innerHTML = '';
 
             if(data.length===0){
                 const row = document.createElement('tr');
-                row.innerHTML = '<td colspan="6">No new complaints found right now.</td>';
-                newcomplaintTableBody.appendChild(row);
+                row.innerHTML = '<td colspan="8">No assigned complaints found right now.</td>';
+                assignedcomplaintTableBody.appendChild(row);
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
@@ -376,15 +347,17 @@
                         <td>${complaint.created_at}</td> 
                         <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
                         <td style="color:#525b75;">${complaint.department__department_name}</td>
-                        <td style="color:#000;font-weight:590;">${complaint.title}</td> 
-                        <td><button onclick="openComplaintOverlay(this)" data-complaint="${encodeURIComponent(JSON.stringify(complaint))}" class="save-button" style="display:flex;align-items:center;gap:5px;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
-                                <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
-                                <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
-                            </svg> View
-                        </button></td>                
+                        <td style="color:#000;font-weight:590;">${complaint.title}</td>
+                        <td style="color:#525b75;">${complaint.technician__technician_name}</td> 
+                        <td style="color:#525b75;">${complaint.technician__technician_number}</td> 
+                        <td><button class="save-button" style="display:flex;align-items:center;gap:5px;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
+                            <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                            <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9 9 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.4 10.4 0 0 1-.524 2.318l-.003.011a11 11 0 0 1-.244.637c-.079.186.074.394.273.362a22 22 0 0 0 .693-.125m.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6-3.004 6-7 6a8 8 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a11 11 0 0 0 .398-2"/>
+                            </svg> Message
+                        </button></td>  
                     `;
-                    newcomplaintTableBody.appendChild(row);
+                    assignedcomplaintTableBody.appendChild(row);
                 });
             }
         })
@@ -392,28 +365,8 @@
             console.error('Error fetching recent complaints:', error);
         });
     }
-    function openComplaintOverlay(button) {
-        const complaint = JSON.parse(decodeURIComponent(button.dataset.complaint));
-
-        document.getElementById('overlayTitle').textContent = complaint.title;
-        document.getElementById('overlayDescription').textContent = complaint.description;
-        document.getElementById('overlayComplaintId').textContent=complaint.id;
-        document.getElementById('overlayFaculty').textContent = complaint.faculty__faculty_name;
-        document.getElementById('overlayDepartment').textContent = complaint.department__department_name;
-        document.getElementById('overlayDate').textContent = complaint.created_at;
-        const assignTechnicianButton = document.getElementById('assigntechnician');
-        assignTechnicianButton.addEventListener('click', function(event) {
-            event.preventDefault(); 
-            const redirectUrl = "{% url 'adminassigntechnician' %}#complaint_" + complaint.id;
-            window.open(redirectUrl,'_parent'); 
-        });
-        document.getElementById('complaintOverlay').style.display = 'block';
-    }
-    function closeComplaintOverlay() {
-        document.getElementById('complaintOverlay').style.display = 'none';
-    }
     document.addEventListener('DOMContentLoaded', () => {
-        getnewcomplaints();
+        getassignedcomplaints();
     });
     function getCookie(name) {
         let cookieValue = null;
