--- a/static/css/facultystyles.css
+++ b/static/css/facultystyles.css
@@ -6,6 +6,7 @@
     padding-left: 20px;
     padding-right: 20px;
     border: 1px solid rgba(203, 208, 221, 0.54);
+    padding-bottom: 10px;
 }
 .table-container{
     margin-top: 12px;
@@ -17,7 +18,7 @@
     margin-bottom: 10px;
 }
 .tables th, .tables  td {
-    padding:8px;
+    padding:15px;
     font-size: 13px;
     text-align: left;
     font-weight: 200;
