--- a/queryraiserapp/templates/admindashboard.html
+++ b/queryraiserapp/templates/admindashboard.html
@@ -99,6 +99,9 @@
                         
                     </a>
                     <ul class="submenu">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'adminallcomplaintspage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                            <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
+                          </svg>All Complaints</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'adminnewcomplaints' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                             <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
@@ -121,11 +124,11 @@
                                 
                             </a>
                             <ul class="submenu">
-                                <li class="nav-item"><a class="nav-link" href="{% url 'adminfield' %}">Faculty</a></li>
-                                <li class="nav-item"><a class="nav-link" href="{% url 'admintechnician' %}">Techincian</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'adminfacultypendingpage' %}">Faculty</a></li>
+                                <li class="nav-item"><a class="nav-link" href="{% url 'admintechnicianpendingpage' %}">Techincian</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'admintechnician' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'adminresolvedpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                             <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
                           </svg>Resolved Complaints</a></li>
@@ -197,7 +200,12 @@
                     <table id="quickstatstable" class="tables">
                         <thead>
                             <tr>
-                                <th style="border: 1px solid #007bff;background-color: #ADD8E6;">
+                                <th style="border: 1px solid #800080;background-color: #f5e1f5;">
+                                    <span>All Complaints</span> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                                        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
+                                      </svg>
+                                 </th>
+                                <th style="border: 1px solid #007bff;background-color: #cce5ff;">
                                    <span>New Complaints</span> <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                                     <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
@@ -287,7 +295,7 @@
                                 </tbody>
                         </table>
                     </div>
-                    <a href="" style="font-size: 13px;color: #007bff;display: flex;align-items: center;gap: 5px;" id="viewall">View all <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <a href="{% url 'adminnewcomplaints' %}" style="font-size: 13px;color: #007bff;display: flex;align-items: center;gap: 5px;" id="viewall">View all <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                       </svg></a>
                 </div>
@@ -311,7 +319,7 @@
                                 </tbody>
                         </table>
                     </div>
-                    <a href="" style="font-size: 13px;color: #007bff;display: flex;align-items: center;gap: 5px;" id="viewall">View all <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
+                    <a href="{% url 'admintechnicianreports' %}" style="font-size: 13px;color: #007bff;display: flex;align-items: center;gap: 5px;" id="viewall">View all <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-chevron-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708"/>
                       </svg></a>
                 </div>
@@ -369,6 +377,7 @@
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
                     row.innerHTML = `
+
                         <td style="color:#007bff;">${complaint.id}</td> 
                         <td>${complaint.created_at}</td> 
                         <td style="color:#007bff;">${complaint.faculty__faculty_name}</td> 
@@ -405,6 +414,7 @@
                 const complaintCounts = data.complaint_counts;
                 const row = document.createElement('tr');
                 row.innerHTML = `
+                    <td style="color:#800080;">${complaintCounts.total}</td> 
                     <td style="color:#007bff;">${complaintCounts.new}</td> 
                     <td style="color:#fd7e14;">${complaintCounts.assigned}</td> 
                     <td style="color:#ffc107;">${complaintCounts.pending_review}</td> 
@@ -425,6 +435,7 @@
                             label: 'Complaint Status',
                             data: chartData,
                             backgroundColor: [
+                                '#f5e1f5',
                                 '#007bff', 
                                 '#fd7e14',
                                 '#ffc107', 
@@ -445,12 +456,13 @@
                         label: 'Complaint Status',
                         data: chartData,
                         backgroundColor: [
-                            '#007bff', 
-                            '#fd7e14',
-                            '#ffc107', 
-                            '#28a745', 
-                            '#A9A9A9', 
-                            '#dc3545' 
+                            'rgba(245, 225, 245, 0.5)',
+                            'rgba(0, 123, 255, 0.5)',   
+                            'rgba(253, 126, 20, 0.5)',  
+                            'rgba(255, 193, 7, 0.5)',  
+                            'rgba(40, 167, 69, 0.5)',  
+                            'rgba(169, 169, 169, 0.5)', 
+                            'rgba(220, 53, 69, 0.5)'  
                         ],
                     }]
                 },
