--- a/queryraiserapp/templates/index.html
+++ b/queryraiserapp/templates/index.html
@@ -125,12 +125,13 @@
             }
         }
     </script>
-    <footer>
-        <a href="https://harshavardhanvemali.netlify.app/" target="_blank" style="text-decoration: none;">
-            <img src="{% static '/images/15217B18-D3CE-4794-BA0D-C3F24714219E_1_201_a.jpeg' %}" alt="college_logo"> 
-        </a>
-        <h4>&copy; 2024. All rights reserved to <a href="https://harshavardhanvemali.netlify.app/" target="_blank">V.Harsha Vardhan</a>&nbsp;(Department Of Data Engineering).</h4>
-        <a href="https://harshavardhanvemali.netlify.app/" id="viewportfolio" target="_blank">View Portfolio</a>
-    </footer>
+    <footer class="footer position-absolute">
+        <div>
+            <p>&copy; 2024. All rights reserved to <a href="https://harshavardhanvemali.netlify.app/" target="_blank">V.Harsha Vardhan(22331A4765)</a>&nbsp; | Department Of Data Engineering.</p>
+        </div>
+        <div>
+            <p>MVGR</p>
+        </div>
+  </footer> 
 </body>
 </html>
