--- a/queryraiserapp/templates/facutlypendingcomplaints.html
+++ b/queryraiserapp/templates/facutlypendingcomplaints.html
@@ -11,6 +11,100 @@
     <link rel="stylesheet" href="{% static 'css/pannelstyles.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
+<style>
+    .overlay {
+        display: none; 
+        position: fixed; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7); 
+        z-index: 1000; 
+        transition: opacity 0.3s ease-in-out; 
+    }
+    
+    .overlay-content {
+        background-color: #fff;
+        margin: 1% auto; 
+        padding: 30px;
+        border-radius: 10px;
+        max-width: 500px;
+        position: relative;
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
+        animation: slideIn 0.4s ease-in-out; 
+        text-align: center; 
+        font-family: 'Arial', sans-serif; 
+    }
+    
+    .close-button {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        font-size: 24px;
+        font-weight: bold;
+        color: #888;
+        cursor: pointer;
+        transition: color 0.2s;
+    }
+    
+    .close-button:hover {
+        color: #e74c3c;
+    }
+    .overlay-content h3 {
+        font-size: 24px;
+        margin-bottom: 15px;
+        color: #333;
+    }
+    .overlay-content p {
+        font-size: 16px;
+        margin: 10px 0;
+        color: #555;
+        line-height: 1.5;
+    }
+    
+    .overlay-content p strong {
+        color: #333;
+    }
+    
+    @keyframes slideIn {
+        from {
+            transform: translateY(-30px);
+            opacity: 0;
+        }
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+    .overlay-content h3 {
+        font-size: 24px;
+        margin-bottom: 20px;
+        color: #007bff;
+        text-align: center; 
+    }
+    
+    .complaint-details {
+        display: grid;
+        grid-template-columns: 1fr 2fr; 
+        gap: 10px; 
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    
+    .complaint-details label {
+        font-weight: bold;
+        text-align: left;
+    }
+    
+    .complaint-details span {
+        text-align: left;
+    }
+    
+    .assign-technician {
+        text-align: center; 
+    }
+    </style>
 <body>
     <header>
         <div class="header-container">
@@ -72,25 +166,29 @@
                         
                     </a>
                     <ul class="submenu">
-                        <li class="nav-item"><a class="nav-link active" href="{% url 'faculty_all_complaints_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'faculty_all_complaints_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots" viewBox="0 0 16 16">
                             <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3m5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3"/>
                           </svg>All Complaints</a></li>
-                          <li class="nav-item"><a class="nav-link" href="{% url 'facultynewcomplaintspage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'facultynewcomplaintspage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"/>
                             <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
                             <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
                           </svg>New Complaints</a></li>
-                          <li class="nav-item"><a class="nav-link" href="{% url 'faculty_assigned_tech_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link" href="{% url 'faculty_assigned_tech_page' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-check" viewBox="0 0 16 16">
                             <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
                             <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
-                          </svg>Assigned Complaints</a></li>
-                          
+                        </svg>Assigned Complaints</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'facultyresolvedpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                            <path d="m10.97 4.97-.02.022-3.473 4.425-2.093-2.094a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
+                        </svg>Resolved Complaints</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'adminfield' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48">
                             <circle cx="24" cy="24" r="20" fill="none" stroke="#e0e0e0" stroke-width="4"/>
                             <circle cx="24" cy="24" r="20" fill="none" stroke="#4caf50" stroke-width="4"
                                     stroke-dasharray="125.66" stroke-dashoffset="31.42"/>
                           </svg>Update Status</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'admintechnician' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'facultypendingpage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clock-history" viewBox="0 0 16 16">
                             <path d="M8.515 1.019A7 7 0 0 0 8 1V0a8 8 0 0 1 .589.022zm2.004.45a7 7 0 0 0-.985-.299l.219-.976q.576.129 1.126.342zm1.37.71a7 7 0 0 0-.439-.27l.493-.87a8 8 0 0 1 .979.654l-.615.789a7 7 0 0 0-.418-.302zm1.834 1.79a7 7 0 0 0-.653-.796l.724-.69q.406.429.747.91zm.744 1.352a7 7 0 0 0-.214-.468l.893-.45a8 8 0 0 1 .45 1.088l-.95.313a7 7 0 0 0-.179-.483m.53 2.507a7 7 0 0 0-.1-1.025l.985-.17q.1.58.116 1.17zm-.131 1.538q.05-.254.081-.51l.993.123a8 8 0 0 1-.23 1.155l-.964-.267q.069-.247.12-.501m-.952 2.379q.276-.436.486-.908l.914.405q-.24.54-.555 1.038zm-.964 1.205q.183-.183.35-.378l.758.653a8 8 0 0 1-.401.432z"/>
                             <path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0z"/>
                             <path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5"/>
@@ -125,7 +223,7 @@
         <main class="content"> 
             <div class="subnav d-flex justify-content-between align-items-center"> 
                 <div>
-                    <h3>All Complaints</h3>
+                    <h3>Pending Complaints</h3>
                 </div>
                 <div class="addbranches" style="display: flex;gap: 10px;"> 
                     <div>
@@ -155,19 +253,19 @@
                     </div>
                 </div>
             </div>
-            <div class="recentcomplainttable">
+            <div class="resolvedcomplainttable">
                 <div class="tablelist">
-               
                     <div class="table-container">
-                        <table class="tables" id="recentcomplaintstable">
+                        <table class="tables" id="resolvedcomplaintstable">
                             <thead>
                                 <tr>
                                     <th>Complaint ID</th>
-                                    <th>Date Raised</th>
                                     <th>Title</th>
                                     <th>Technician</th>
                                     <th>Technician Number</th>
-                                    <th>Status</th>
+                                    <th>Date Raised</th>
+                                    <th>Date Assigned</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -176,6 +274,45 @@
                     </div>
                 </div>
             </div>
+            <div id="complaintOverlay" class="overlay">
+                <div class="overlay-content">
+                    <span class="close-button" onclick="closeComplaintOverlay()">×</span>
+                    <h3 id="overlayTitle"></h3> 
+                    <div class="complaint-details">
+                        <label for="overlayDescription">Description</label>
+                        <span id="overlayDescription"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayComplaintId">Complaint ID</label>
+                        <span id="overlayComplaintId"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayDate">Date Raised</label>
+                        <span id="overlayDate"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayDateAssigned">Date Assigned</label>
+                        <span id="overlayDateAssigned"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayAssignedTechnician">Assigned Technician</label>
+                        <span id="overlayAssignedTechnician"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayTechnicianNumber">Technician Number</label>
+                        <span id="overlayTechnicianNumber"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayTechnicianstatus">Technician Status</label>
+                        <span id="overlayTechnicianstatus"></span>
+                    </div>
+                    <div class="complaint-details">
+                        <label for="overlayTechniciancomments">Technician Pending Comments</label>
+                        <span id="overlayTechniciancomments"></span>
+                    </div>
+                    
+                </div>
+            </div>         
         </main> 
         <footer class="footer position-absolute">
             <div>
@@ -188,50 +325,59 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
     <script>
-        const navLinks = document.querySelectorAll('.nav-link');
-        const submenus = document.querySelectorAll('.submenu');
-        navLinks.forEach(link => {
-            link.addEventListener('click', function(e) {
-                if (this.parentElement.classList.contains('has-submenu')) {
-                    e.preventDefault();
-                    const submenu = this.nextElementSibling;
-                    submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
-                    
-                }
-            });
+    const navLinks = document.querySelectorAll('.nav-link');
+    const submenus = document.querySelectorAll('.submenu');
+
+    navLinks.forEach(link => {
+        link.addEventListener('click', function(e) {
+            if (this.parentElement.classList.contains('has-submenu')) {
+                e.preventDefault();
+                const submenu = this.nextElementSibling;
+                submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
+                
+            }
         });
-        </script>
+    });
+
+    </script>
     <script>
-    function getallcomplaints(){
-        fetch('/facultyallcomplaints/',{
+    function getresolvedcomplaints(){
+        fetch('/facultyresolvedcomplaints/',{
             method: 'POST',
             headers: {
                 'X-CSRFToken': getCookie('csrftoken'),
                 'Content-Type': 'application/json'
-        }
+            }
         })
         .then(response => response.json()) 
         .then(data => {
             console.log(data)
-            const recentcomplaintTableBody = document.querySelector('#recentcomplaintstable tbody');
-            recentcomplaintTableBody.innerHTML = '';
+            const resolvedcomplaintTableBody = document.querySelector('#resolvedcomplaintstable tbody');
+            resolvedcomplaintTableBody.innerHTML = '';
 
             if(data.length===0){
                 const row = document.createElement('tr');
-                row.innerHTML = '<td colspan="7">No Complaints found at this time.</td>';
-                recentcomplaintTableBody.appendChild(row);
+                row.innerHTML = '<td colspan="8">No pending complaints found right now.</td>';
+                resolvedcomplaintTableBody.appendChild(row);
             } else {
                 data.forEach(complaint => { 
                     const row = document.createElement('tr');
                     row.innerHTML = `
                         <td style="color:#007bff;">${complaint.id}</td> 
-                        <td>${complaint.created_at}</td> 
-                        <td style="color:#000;font-weight:590;">${complaint.title}</td> 
-                        <td style="color:#6e7891;">${complaint.technician__technician_name}</td> 
-                        <td style="color:#6e7891;">${complaint.technician__technician_number}</td> 
-                        <td style="color:#525b75;">${complaint.status}</td>                
+                        <td style="color:#000;font-weight:590;">${complaint.title}</td>
+                        <td style="color:#525b75;">${complaint.technician__technician_name}</td> 
+                        <td style="color:#525b75;">${complaint.technician__technician_number}</td> 
+                        <td>${complaint.created_at}</td>  
+                        <td>${complaint.assigned_time}</td> 
+                        <td>${complaint.technician_status}</td>
+                        <td><button onclick="openComplaintOverlay(this)" data-complaint="${encodeURIComponent(JSON.stringify(complaint))}" class="save-button" style="display:flex;align-items:center;gap:5px;">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8M1.173 8a13 13 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5s3.879 1.168 5.168 2.457A13 13 0 0 1 14.828 8q-.086.13-.195.288c-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5s-3.879-1.168-5.168-2.457A13 13 0 0 1 1.172 8z"/>
+                                <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5M4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0"/>
+                            </svg> View
+                        </button></td>
                     `;
-                    recentcomplaintTableBody.appendChild(row);
+                    resolvedcomplaintTableBody.appendChild(row);
                 });
             }
         })
@@ -239,9 +385,27 @@
             console.error('Error fetching recent complaints:', error);
         });
     }
+    function openComplaintOverlay(button) {
+        const complaint = JSON.parse(decodeURIComponent(button.dataset.complaint));
+
+        document.getElementById('overlayTitle').textContent = complaint.title;
+        document.getElementById('overlayDescription').textContent = complaint.description;
+        document.getElementById('overlayComplaintId').textContent=complaint.id;  
+        document.getElementById('overlayDate').textContent = complaint.created_at;
+        document.getElementById('overlayDateAssigned').textContent = complaint.assigned_time;
+        document.getElementById('overlayAssignedTechnician').textContent = complaint.technician__technician_name;
+        document.getElementById('overlayTechnicianNumber').textContent = complaint.technician__technician_number;
+        document.getElementById('overlayTechniciancomments').textContent = complaint.technician_pending_comments;
+        document.getElementById('overlayTechnicianstatus').textContent=complaint.technician_status
+        document.getElementById('complaintOverlay').style.display = 'block';
+    }   
+    function closeComplaintOverlay() {
+        document.getElementById('complaintOverlay').style.display = 'none';
+    }
     document.addEventListener('DOMContentLoaded', () => {
-        getallcomplaints();
+        getresolvedcomplaints();
     });
+    
     function getCookie(name) {
         let cookieValue = null;
         if (document.cookie && document.cookie !== '') {
